--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  
 <html>
   <head>
-    <title>Gesture-Web-App</title>
+    <title>Hand Gesture App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -52,7 +52,7 @@
 	      <label>Snapshot - </label>
         <div id="result"></div>
         <br><br>
-      <button onclick="check();" class="btn btn-success">Predict Emotion</button>
+      <button onclick="check();" class="btn btn-success">Predict gesture</button>
       </div>
 
     </center>
